--- a/style/style.css
+++ b/style/style.css
@@ -120,66 +120,28 @@ h3.headding-title {
    
     margin: 0px 120px 1px 120px;
 }
-@media only screen and (max-width: 1440px) {
-    
-    .contenar-parent-div {
-        display: flex;
-        padding-top: 150px;
-        /* padding-left: 350px; */
-        align-items: center;
-        gap: 200px;
-    }
-
-    .img-list-item>li>img {
-        margin: 0px 15px 1px 120px;
-    }
-    .contenar-parent-div {
-        display: flex;
-        padding-top: 150px;
-        padding-left: 40px;
-        align-items: center;
-        gap: 200px;
-    }
-    .plans-parent-div {
-        padding: 100px;
-        padding-top: 10px;
-    }
-    .contenar-parent-div {
-        display: flex;
-        padding-top: 150px;
-        padding-left: 100px;
-        align-items: center;
-        gap: 80px;
-    }
-    .header-div {
-        text-align: right;
-        padding: 25px 128px 3px;
-    }
-    h3.headding-title {
-        font-size: 58px;
-        font-family: arial;
-        margin-bottom: 35px;
-        text-shadow: -4px 2px 5px #404040;
-    }
-    .header-div {
-        text-align: right;
-        padding: 0px 104px 0px;
-        padding-bottom: 174px;
-    }
-    p.header-description {
-        line-height: 27px;
-        margin-bottom: 39px;
-        margin-top: 54px;
-    }
-    .header {
-        background: url('/images/banner/banner1.png');
-        background-repeat: no-repeat;
-        width: 100%;
-        height: auto;
-        /* background-position: top right; */
-        display: flex;
-        margin: 0;
-        justify-content: end;
-        background-size: cover;
-    }
+.plans-titl>li{
+    margin: 0px 95px 0px 108px;
+    list-style: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
 }
+.plans-title-parent-div, .larnig-time-parent-div{
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+
+}
+.plans-titl, .larning-time-list{
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+ .larning-time-list li{
+    /* margin: 0px 95px 0px 108px; */
+    margin: 0px 79px 0px 151px;
+    list-style: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    color: #474747;
+ }
