--- a/style-1/style-1.css
+++ b/style-1/style-1.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Manrope", sans-serif;
-  
-  }
+
+}
 
 /* header style  */
 header {
@@ -15,23 +15,27 @@ header {
     margin: 0;
     background-size: cover;
 }
-.header-content-parent-div{
+
+.header-content-parent-div {
     width: 500px;
     padding-right: 200px;
     text-align: right;
     padding-top: 150px;
     padding-bottom: 353px;
 }
+
 .header-content-parent-div h3 {
     font-size: 65px;
     color: white;
     font-family: sans-serif;
     margin-bottom: 30px;
 }
+
 .header-content-parent-div p {
     color: white;
     font-size: 20px;
 }
+
 button.btn-primary {
     padding: 23px 37px;
     background: white;
@@ -40,36 +44,169 @@ button.btn-primary {
     border-radius: 5px;
     font-size: 30px;
 }
+
 /* main style */
-.main-contenar-parent-div{
-  
-        display: flex;
-        align-items: center;
-        padding: 100px 296px;
-        gap: 230px;
-    
+.main-contenar-parent-div {
+
+    display: flex;
+    align-items: center;
+    padding: 100px 296px;
+    gap: 230px;
+
 }
-.main-icon-list{
+
+.main-icon-list {
     list-style: none;
     margin-left: -37px;
 }
-.main-icon-list > li > img{
+
+.main-icon-list>li>img {
 
     width: 20px;
-    margin-bottom: 4px;
+    margin-bottom: -4px;
 }
-.main-contenar-parent-div-1 h2{
+
+.main-contenar-parent-div-1 h2 {
     font-size: 55px;
-   
-    
+
+
 }
+
 .main-contenar-parent-div-1 p {
     color: #434443;
     font-size: 20px;
     line-height: 30px;
 }
+
 .main-contenar-parent-div-1 li {
     color: #434443;
     font-size: 20px;
     line-height: 30px;
+}
+
+/* plans style */
+.plans-parent-div {
+    padding: 100px 296px;
+}
+
+.plans-parent-div>h2 {
+    text-align: center;
+    font-size: 40px;
+    margin-right: -70px;
+    margin-bottom: 75px;
+}
+
+ul.plans-list-ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+ul#plans-list-ul-plans {
+    margin-left: -70px;
+    font-size: 27px;
+    margin-right: -35px;
+}
+
+ul#plans-list-ul-descripsion {
+    color: #474747;
+    font-size: 20px;
+    margin-left: -21px;
+    margin-right: -45px;
+    margin-top: 0px;
+}
+
+ul#plans-list-ul-descripsion>li {
+    margin-top: -16px;
+}
+
+.main-background-img-div {
+    background-image: url(/images/gradient1.png), url(/images/watch.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    background-size: 76% auto;
+    background-position: center center;
+}
+
+
+.main-background-child {
+    width: 654px;
+    padding: 65px 0px 60px 311px;
+    margin-bottom: 71px;
+}
+
+.main-background-child h1 {
+    color: white;
+    font-size: 50px;
+    margin-top: 16px;
+    margin-bottom: 17px;
+}
+
+button#call-now {
+    margin-bottom: 50px;
+}
+
+/* footer style */
+footer {
+    background-color: #151414;
+    display: flex;
+    gap: 11%;
+    justify-content: space-between;
+}
+
+.footer-conternar-div {
+    padding: 90px 260px;
+    color: white;
+}
+
+.footer-conternar-div h2 {
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+ul.footer-icon {
+    list-style: none;
+    display: flex;
+    margin-left: -38px;
+}
+
+ul.footer-icon li {
+    padding-right: 26px;
+    margin-top: 0px;
+}
+
+.footer-conternar-div h5 {
+    font-size: 17px;
+    margin-top: 0px;
+}
+
+.footer-conternar-div p {
+    font-size: 17px;
+    margin-top: 0px;
+}
+
+input[type="email"] {
+    color: white;
+    background: transparent;
+    border: solid 1px;
+    border-radius: 11px;
+    padding: 20px 30px;
+    font-size: 20px;
+}
+
+button#submit {
+    padding: 20px 30px;
+    background: #005FAC;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 30px;
+    margin-top: 35px;
+
+}
+
+.footer-conternar-div h3 {
+    font-size: 39px;
+    margin-bottom: 20px;
 }
